[package]
name = "tf-hwp-cli"
description = "tf-hwp CLI: detect / info / extract-text / oracle."
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "tf-hwp"
path = "src/main.rs"

[features]
default = []
# Compile the rhwp bootstrap so `render`/`view`/`fidelity` compare work (needs external/rhwp submodule).
rhwp = ["hwp-core/rhwp", "hwp-fidelity/rhwp"]
# Enable the AI providers for `ai-fill`: Anthropic BYOK (env or keychain) + local Ollama (Qwen3).
ai = ["hwp-ai/anthropic", "hwp-ai/keyring", "hwp-ai/local"]

[dependencies]
hwp-model = { workspace = true }
hwp-ingest = { workspace = true }
hwp-hwpx = { workspace = true }
hwp-ops = { workspace = true }
hwp-ai = { workspace = true }
hwp-core = { workspace = true }
hwp-jsx = { workspace = true }
hwp-export = { workspace = true }
hwp-oracle = { workspace = true }
hwp-fidelity = { path = "../hwp-fidelity" }
clap = { workspace = true }
